# aitube-service

./: background.py  engine.py  prompts.py  pyproject.toml  requirements.txt  speech_generators.py
Resources/goldfish_vts/: Goldfish_Live2D_V00.cdi3.json  Goldfish_Live2D_V00.moc3  Goldfish_Live2D_V00.model3.json  Goldfish_Live2D_V00.physics3.json  Goldfish_Live2D_V00.vtube.json  Hide Tank.exp3.json  Idle.motion3.json  items_pinned_to_model.json
Resources/tungtungtung/: Scene1.motion3.json  items_pinned_to_model.json  tungtungtung.cdi3.json  tungtungtung.moc3  tungtungtung.model3.json  tungtungtung.physics3.json  tungtungtung.vtube.json
